syntax = "proto3";

package im.ghasedak.rpc;

option java_package = "im.ghasedak.rpc.misc";
option java_multiple_files = true;

message ResponseVoid {
}